# TFG-LIDAR-NUBES-AEROSOLES

./: README.md  pyproject.toml
data/: L2_0-20008-0-UGR_A20240102.nc  L2_0-20008-0-UGR_A20240122.nc  L2_0-20008-0-UGR_A20240206.nc  L2_0-20008-0-UGR_A20240210.nc  L2_0-20008-0-UGR_A20240213.nc  L2_0-20008-0-UGR_A20240301.nc  L2_0-20008-0-UGR_A20240308.nc  L2_0-20008-0-UGR_A20240314.nc  L2_0-20008-0-UGR_A20240406.nc
dec/: aerosolestadisticas.py  aerosoltxt.py  checkpoints.weights.h5  cluster_file.py  cluster_filebueno.py  dbscan.py  encoder.dev.keras  encoder.py  estadisticasconfusiones.py  kmeans.py  nubestxt.py  plot_rcs.py  raw_cluster_file.py  raw_cluster_file_bucleplot.py  raw_cluster_file_bucleplotk=8.py  vervariablescodigo.py
dec/bak/: encoder.keras
playground/: dbscan.py  kmeans.py
salidastxt/estadisticasnubes/all/all/: confusion_2px.txt  confusion_3px.txt  confusion_475m.txt  confusion_4px.txt
salidastxt/estadisticasnubes/all/no_rain/: confusion_2px.txt  confusion_3px.txt  confusion_475m.txt  confusion_4px.txt
salidastxt/estadisticasnubes/allall/all/: confusion_2px.txt  confusion_3px.txt  confusion_475m.txt  confusion_4px.txt
salidastxt/estadisticasnubes/allall/no_rain/: confusion_2px.txt  confusion_3px.txt  confusion_475m.txt  confusion_4px.txt
salidastxt/estadisticasnubes/no_multilayer/all/: confusion_2px.txt  confusion_3px.txt  confusion_475m.txt  confusion_4px.txt
salidastxt/estadisticasnubes/no_multilayer/no_rain/: confusion_2px.txt  confusion_3px.txt  confusion_475m.txt  confusion_4px.txt
